// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading... Will not render the loading bubbles 1`] = `
<div
  id="loadingcontainer"
>
  <Memo(ForwardRef(DownloadDoneIcon)) />
</div>
`;

exports[`Loading... Will render the loading bubbles 1`] = `
<div
  id="loadingcontainer"
>
  <div
    className="bubbles A"
  />
  <div
    className="bubbles B"
  />
  <div
    className="bubbles C"
  />
</div>
`;
